--- a/ecomsite/shop/templates/shop/detail.html
+++ b/ecomsite/shop/templates/shop/detail.html
@@ -7,18 +7,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <title>Product Details</title>
 </head>
+<style>
+
+</style>
 <body>
     {% block content %}
     <div class="container mt-5">
         <div class="row align-items-center">
-          <div class="col-md-4">
+          <div class="col-md-6">
+              <div class= "feature-image">
             <img src="{{ product_object.image }}" alt="Product Image" class="img-fluid mb-3">
           </div>
-          <div class="col-md-6" style="background-color: #6c757d; padding: 120px;">
+          </div>
+          <div class="col-md-6" style="background-color: #37acef; padding: 120px;">
             <h1>{{ product_object.title }}</h1>
-            <h2 class="text-danger">{{ product_object.price }}/hr</h2>
-            <div class="text-primary mb-3" style="color: #fff; font-weight:bold;">Specialities:{{ product_object.category }}</div>
-            <p>{{ product_object.description }}</p>
+            <h2>${{ product_object.price }}/hr</h2>
+            <div>Specialities: {{ product_object.category }}</div><br>
+            <p> Description: {{ product_object.description }}</p>
           </div>
         </div>
       </div>
