--- a/ecomsite/shop/templates/shop/login.html
+++ b/ecomsite/shop/templates/shop/login.html
@@ -32,6 +32,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    filter: brightness(50%);
     z-index: -1; /* Move the background behind other elements */
 }
 form{
