--- a/ecomsite/shop/templates/shop/signup.html
+++ b/ecomsite/shop/templates/shop/signup.html
@@ -125,7 +125,7 @@ button{
     </div>
     <form action="" method="post">
         {% csrf_token %}
-        <h3>Admin Signup Here</h3>
+        <h3>Signup Here</h3>
 
         <label for="username">Enter Username</label>
         <input type="text" placeholder="Username" name="username" id="username">
