--- a/ecomsite/shop/templates/shop/login.html
+++ b/ecomsite/shop/templates/shop/login.html
@@ -123,7 +123,7 @@ button{
     <div class="background">
     </div>
     <form method="post">
-        <h3>Admin Login Here</h3>
+        <h3> Login Here</h3>
         {% csrf_token %}
         <label for="username">Username</label>
         <input type="text" placeholder="Enter Username" id="username" name="username">
